force-app/main/default/objects/CustomerTeamDeletionRequests__c/CustomerTeamDeletionRequests__c.object-meta.xml
<CustomObject>
    <label>CustomerTeamDeletionRequests</label>
    <nameField>
        <displayFormat>CTDR-{00000000}</displayFormat>
        <label>CustomerTeamDeletionRequests Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CustomerTeamDeletionRequests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>