force-app/main/default/objects/CustomerTeamDeletionRequests__c/fields/User_to_Delete__c.field-meta.xml
<CustomField>
    <fullName>User_to_Delete__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User to Delete</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CustomerTeamDeletionRequests</relationshipName>
    <type>Lookup</type>
</CustomField>