force-app/main/default/objects/CustomerTeamDeletionRequests__c/recordTypes/CustomerTeamDeletes.recordType-meta.xml
<RecordType>
    <fullName>CustomerTeamDeletes</fullName>
    <active>true</active>
    <label>CustomerTeamDeletes</label>
</RecordType>